# DeepAutoQC

./: .gitignore  .pre-commit-config.yaml  DataAugmentation.ipynb  DataAugmentationTechniques.ipynb  DataLoadTest.ipynb  Dataset.ipynb  LICENSE.md  README.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt
src/: DataAugmentation.ipynb  Dataset.ipynb
src/DeepAutoQC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/deepautoqc/: NameParser.py  VAE.py  ae_arch2.py  ae_architecture.py  ae_testing.ipynb  args.py  data.py  data_structures.py  evaluate_models.py  lightning_module.py  metrics.py  models.py  ni_image_helpers.py  svg_parser_usable.py  test.py  train.py  transforms.py  utils.py
src/deepautoqc/experiments/: ResNet18_AE.py  data_setup.py  experiment_run.py  resnet18_vae.py  utils.py
src/deepautoqc/experiments/notebooks/: ae_testing.ipynb  gradcam_experiments2.ipynb  test_roc_curve_behaviour.ipynb  torchcam_experiments.ipynb
src/deepautoqc/predictions/: 2002_Tall-CBR.pickle  L_ResNet50_frozen_evaluation.pickle  L_ResNet50_ft_evaluation.pickle  L_Small-CBR_evaluation.pickle  L_Tall-CBR_evaluation.pickle  L_Tiny-CBR_evaluation.pickle  L_V1ResNet50_ft_evaluation.pickle  L_V3ResNet50_evaluation.pickle  L_Wide-CBR_evaluation.pickle  ResNet50_frozen_evaluation.pickle  S1V1-ResNet50_ft_evaluation.pickle  S1V2_ResNet50_ft_evaluation.pickle  S_V3ResNet50_ft_evaluation.pickle  Series2_2002Tall-CBR_eval.pickle  Series2_2002_Tall-CBR_evaluation.pickle  Series2_2801_Tall-CBR_evaluation.pickle  Series2_L_ResNet50_frozen_evaluation.pickle  Series2_L_Small-CBR_evaluation.pickle  Series2_L_Tall-CBR_evaluation.pickle  Series2_L_Tiny-CBR_evaluation.pickle  Series2_L_V1ResNet50_ft_evaluation.pickle  Series2_L_V3ResNet50_ft_evaluation.pickle  Series2_L_Wide-CBR_evaluation.pickle  Series2_ResNet50_frozen_evaluation.pickle  Series2_S_V3ResNet50_ft_evaluation.pickle  Series2_Small-CBR_evaluation.pickle  Series2_Tiny-CBR_evaluation.pickle  Series2_V1ResNet50_ft_evaluation.pickle  Series2_V2ResNet50_ft_evaluation.pickle  Series2_Wide-CBR_evaluation.pickle  Series3_L_Small-CBR_evaluation.pickle  Series3_L_Tall-CBR_evaluation.pickle  Series3_L_Tiny-CBR_evaluation.pickle  Series3_L_V3ResNet_evaluation.pickle  Series3_L_Wide-CBR_evaluation.pickle  Series3_S_V3ResNet_evaluation.pickle  Series3_Small-CBR_evaluation.pickle  Series3_Tall-CBR_evaluation.pickle  Series3_Tiny-CBR_evaluation.pickle  Series3_Wide-CBR_evaluation.pickle  (+13 more)
src/deepautoqc/scripts/: evaluation.py  pickle_scanner.py  script_utils.py  skull-strip_parser.py  skullstrip_parser.py  tsnr_report_parser.py  unpack.py
