[project]
name = "DeepAutoQC"
version = "0.1.0"
authors = [
    { name = "Dominik Goeller", email = "dominik.goeller@charite.de"},
    { name = "Lea Waller", email = "lea.waller@charite.de"}
]
description = "Image classification for the ENIGMA HALFPipe project using deep learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "matplotlib",
    "torchio",
    "pathlib",
    "nibabel",
    "torchvision",
    "halfpipe",
    "nilearn",
    "niworkflows",
    "seaborn",
    "pre-commit"
]
[project.urls]
"Homepage" = "https://github.com/dominikgoeller/DeepAutoQC"
"Bug Tracker" = "https://github.com/dominikgoeller/DeepAutoQC/issues"
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["deepautoqc*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["deepautoqc.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
[tool.setuptools.dynamic]
readme = {file = "README.md"}
[tool.isort]
profile = "black"
line_length = 79
