[project]
name = "DeepAutoQC"
version = "0.1.0"
authors = [
    { name = "Dominik Goeller", email = "dominik.goeller@charite.de"},
    { name = "Lea Waller", email = "lea.waller@charite.de"}
]
description = "Image classification for the ENIGMA HALFPipe project using deep learning"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
classifiers = [
                Programming Language :: Python :: 3.11,
                Development Status :: 4 - Beta,
                Operating System :: OS Independent,
                License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+),
                ]

[project.urls]
repository = "https://github.com/dominikgoeller/DeepAutoQC"
Bug Tracker = "https://github.com/dominikgoeller/DeepAutoQC/issues"

[build-system]
# sync with requirements.in!!
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]

[tool.isort]
profile = "black"
line_length = 79
